--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
@@ -11,13 +12,17 @@
 
         .header {
             position: relative;
-            background-color: darkorange;
+            /* background-color: darkorange; */
+            background-image: url("head.jpg");
+            background-repeat: no-repeat;
+            background-position: center;
             width: 100%;
-            height: 40px;
+            height: 412px;
             z-index: 99;
         }
 
         .navigation {
+            position: relative;
             background-color: crimson;
             height: 40px;
         }
@@ -29,6 +34,22 @@
         /*    width: 40px;*/
         /*    background-color: blueviolet;*/
         /*}*/
+
+        .navigation .blur {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-position: center;
+            background-image: url("head.jpg");
+            background-repeat: no-repeat;
+        }
+
+        .navigation .mask {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.2);
+        }
 
         .navigation .auth {
             position: absolute;
@@ -55,16 +76,18 @@
 
 
         .navigation .auth .auth_btn:hover {
-           background-color: blueviolet;
+            background-color: blueviolet;
         }
 
         .title {
-            position: relative;
+            position: absolute;
             background-color: yellow;
             margin: 0 auto;
+            left: 0;
+            right: 0;
             width: 40%;
             height: 40px;
-            top: -20px;
+            bottom: -20px;
             text-align: center;
             line-height: 40px;
             color: black;
@@ -81,6 +104,7 @@
             width: 50%;
             float: left;
         }
+
         .content {
             position: relative;
             width: 70%;
@@ -88,35 +112,36 @@
             margin: 0 auto;
             background-color: cornflowerblue;
         }
-
     </style>
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
 </head>
+
 <body>
-<div class="header">
-    <nav class="navigation">
-<!--        <div class="brand">-->
+    <div class="header">
+        <nav class="navigation">
 
-<!--        </div>-->
+            <div class="blur"></div>
+            <div class="mask"></div>
 
-        <div class="auth">
-            <div class="auth_btn">
-                登录
+            <div class="auth">
+                <div class="auth_btn">
+                    登录
+                </div>
+
+                <div class="auth_btn">
+                    注册
+                </div>
             </div>
-
-            <div class="auth_btn">
-                注册
-            </div>
+        </nav>
+        <div class="title">
+            <div>好友</div>
+            <div>我的</div>
         </div>
-    </nav>
-    <div class="title">
-        <div>好友</div>
-        <div>我的</div>
     </div>
-</div>
 
-<div class="content">
+    <div class="content">
 
-</div>
+    </div>
 </body>
+
 </html>
